adds link to osisoft logo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#"><img id="logo" src="assets/osisoft-logo.svg"></a>
+                <a class="navbar-brand" href="https://www.osisoft.com"><img id="logo" src="assets/osisoft-logo.svg"></a>
             </div>
         </div>
     </nav>
