adds google analytics and anchor fix

--- a/index.html
+++ b/index.html
@@ -127,18 +127,18 @@
                 </a>
             </div>
             <div class="strips-container">
-                <div class="strips trans strip1">
-                    <a href="https://techsupport.osisoft.com/Products/">
+                <a href="https://techsupport.osisoft.com/Products/">
+                    <div class="strips trans strip1">
                         <p>Access the latest software</p>
                         <img src="assets/arrow-double.png" />
-                    </a>
-                </div>
-                <div class="strips trans strip2">
-                    <a href="http://pages.osisoft.com/Modern-PI-System.html">
+                    </div>
+                </a>
+                <a href="http://pages.osisoft.com/Modern-PI-System.html">
+                    <div class="strips trans strip2">
                         <p>Get information about professional services</p>
                         <img src="assets/arrow-double.png" />
-                    </a>
-                </div>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
@@ -183,6 +183,22 @@
     </script>
     <script>
     Munchkin.init('494-OYA-934');
+    </script>
+    <script>
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-66517804-1', 'auto');
+    ga('send', 'pageview');
     </script>
 </body>
 
